deployments/homeassistant/templates/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: homeapps
  labels:
    name: homeapps
