deployments/homeassistant/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      hostNetwork: true
      volumes:
      - name: configfolder
        hostPath:
          path: /home/ubuntu/home-assistant
      - name: mediafolder
        hostPath:
          path: /home/ubuntu/media
      - name: footballsensors-volume
        configMap:
          name: footballsensors
      - name: secrets-volume
        secret:
          secretName: secrets
          items:
          - key: all
            path: all.yaml
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:stable
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 8123
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /config 
          name: configfolder
        - mountPath: /media 
          name: mediafolder
        - mountPath: /config/sensors
          name: footballsensors-volume
        - mountPath: /config/secrets
          name: secrets-volume
