deployments/homeassistant/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: home-assistant-svc
    app.kubernetes.io/version: 2021.6.3
  name: home-assistant-svc
  namespace: homeassistant
spec:
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: home-assistant
  type: ClusterIP
