deployments/homeassistant/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: homeassistant
  namespace: homeapps
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  rules:
  - host: home.birchen.tech
    http:
      paths:
      - backend:
          service:
            name: home-assistant-svc
            port:
              name: http
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - home.birchen.tech
    secretName: home.birchen.tech
